--- a/post_process_data.ipynb
+++ b/post_process_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,23 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['panda0_finger'][:19] = [1]*19\n",
-    "data['panda0_finger'][19:45] = [0]*(45-19)\n",
-    "data['panda0_finger'][45:] = [1]*(101-45)\n",
-    "data['handover_point'] = 44\n",
-    "\n",
-    "data['panda1_finger'][:44] = [0]*(44)\n",
-    "data['panda1_finger'][44:81] = [1]*(81-44)\n",
-    "data['panda1_finger'][81:] = [0]*(101-81)"
+    "data['handover_points'] = [int(1.25*44)]\n",
+    "data['panda0_open_finger_points'] = [int(1.25*44)]\n",
+    "data['panda0_close_finger_points'] = [int(1.25*44)]\n",
+    "data['panda1_open_finger_points'] = [int(1.25*81)]\n",
+    "data['panda1_close_finger_points'] = [int(1.25*44)+1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
