--- a/post_process_data.ipynb
+++ b/post_process_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,20 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['handover_points'] = [int(1.25*44)]\n",
-    "data['panda0_open_finger_points'] = [int(1.25*44)]\n",
-    "data['panda0_close_finger_points'] = [int(1.25*44)]\n",
-    "data['panda1_open_finger_points'] = [int(1.25*81)]\n",
-    "data['panda1_close_finger_points'] = [int(1.25*44)+1]"
+    "data['handover_points'] = [int(0.8*83)]   \n",
+    "data['panda0_open_finger_points'] = [int(0.8*83)+1]\n",
+    "data['panda0_close_finger_points'] = [int(0.8*36)]\n",
+    "data['panda1_open_finger_points'] = [int(116*0.8)]\n",
+    "data['panda1_close_finger_points'] = [int(0.8*83)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
