fix parrallel env curriculum bugs

--- a/post_process_data.ipynb
+++ b/post_process_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,25 +14,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['handover_points'] = [int(0.8*83)]   \n",
-    "data['panda0_open_finger_points'] = [int(0.8*83)+1]\n",
-    "data['panda0_close_finger_points'] = [int(0.8*36)]\n",
-    "data['panda1_open_finger_points'] = [int(116*0.8)]\n",
-    "data['panda1_close_finger_points'] = [int(0.8*83)]"
+    "data['handover_points'] = [39]   \n",
+    "data['panda0_open_finger_points'] = [39+1]\n",
+    "data['panda0_finger'][:20] = [1]*20\n",
+    "data['panda0_finger'][20:40] = [0]*20\n",
+    "data['panda0_finger'][40:101] = [1]*61\n",
+    "\n",
+    "data['panda1_finger'][:39] = [1]*39\n",
+    "data['panda1_finger'][39:90] = [0]*51\n",
+    "data['panda1_finger'][90:101] = [1]*11\n",
+    "\n",
+    "data['panda1_ee'] = np.asarray(data['panda1_ee']) \n",
+    "data['panda1_ee'] -= 0.06\n",
+    "data['panda1_ee'] -= 0.04\n",
+    "data['panda1_ee'] -= 0.01"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('handover1_3_fix_gripper.pkl', 'wb') as f:\n",
     "    pickle.dump(data, f, protocol=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(data['panda0_ee']))"
    ]
   }
  ],
