fix parrallel env curriculum bugs

--- a/post_process_data.ipynb
+++ b/post_process_data.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,15 +28,18 @@
     "data['panda1_finger'][39:90] = [0]*51\n",
     "data['panda1_finger'][90:101] = [1]*11\n",
     "\n",
+    "data['panda0_ee'] = np.asarray(data['panda1_ee']) \n",
     "data['panda1_ee'] = np.asarray(data['panda1_ee']) \n",
-    "data['panda1_ee'] -= 0.06\n",
-    "data['panda1_ee'] -= 0.04\n",
-    "data['panda1_ee'] -= 0.01"
+    "data['panda0_finger'] = np.asarray(data['panda0_finger']) \n",
+    "data['panda1_finger'] = np.asarray(data['panda1_finger']) \n",
+    "data['panda1_ee'][..., 0] -= 0.06\n",
+    "data['panda1_ee'][..., 1] += 0.04\n",
+    "data['panda1_ee'][..., 2] -= 0.01"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
