--- a/post_process_data.ipynb
+++ b/post_process_data.ipynb
@@ -2,66 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pickle\n",
-    "with open('/Users/reedpan/Downloads/trajectory/handover1/handover1_3_fix_gripper.pkl', 'rb') as f:\n",
+    "with open('/Users/reedpan/Downloads/trajectory/exchange2/exchange.pkl', 'rb') as f:\n",
     "    data = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['handover_points'] = [39]   \n",
-    "data['panda0_open_finger_points'] = [39+1]\n",
-    "data['panda0_finger'][:20] = [1]*20\n",
-    "data['panda0_finger'][20:40] = [0]*20\n",
-    "data['panda0_finger'][40:101] = [1]*61\n",
+    "data['panda0_finger_new'] = np.array(data['panda0_finger'])\n",
+    "data['panda1_finger_new'] = np.array(data['panda1_finger'])\n",
+    "data['panda0_ee_new'] = np.array(data['panda0_ee'])\n",
+    "data['panda1_ee_new'] = np.array(data['panda1_ee'])\n",
     "\n",
-    "data['panda1_finger'][:39] = [1]*39\n",
-    "data['panda1_finger'][39:90] = [0]*51\n",
-    "data['panda1_finger'][90:101] = [1]*11\n",
+    "data['panda0_finger_new'][:5] = 1\n",
+    "data['panda0_finger_new'][5:48] = 0\n",
+    "data['panda0_finger_new'][48:110] = 1\n",
+    "data['panda0_finger_new'][110:161] = 0\n",
+    "data['panda0_finger_new'][161:] = 1\n",
     "\n",
-    "data['panda0_ee'] = np.asarray(data['panda1_ee']) \n",
-    "data['panda1_ee'] = np.asarray(data['panda1_ee']) \n",
-    "data['panda0_finger'] = np.asarray(data['panda0_finger']) \n",
-    "data['panda1_finger'] = np.asarray(data['panda1_finger']) \n",
-    "data['panda1_ee'][..., 0] -= 0.03\n",
-    "data['panda1_ee'][..., 1] += 0.04\n",
-    "data['panda1_ee'][..., 2] -= 0.01"
+    "data['panda1_finger_new'][:5] = 1\n",
+    "data['panda1_finger_new'][5:15] = 0\n",
+    "data['panda1_finger_new'][15:47] = 1\n",
+    "data['panda1_finger_new'][47:58] = 0\n",
+    "data['panda1_finger_new'][58:68] = 1\n",
+    "data['panda1_finger_new'][68:111] = 0\n",
+    "data['panda1_finger_new'][111:] = 1\n",
+    "\n",
+    "data['panda1_ee_new'][..., 0] -= 0.06\n",
+    "data['panda1_ee_new'][..., 1] += 0.04\n",
+    "data['panda1_ee_new'][..., 1] -= 0.01"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('handover1_3_fix_gripper.pkl', 'wb') as f:\n",
+    "with open('/Users/reedpan/Downloads/trajectory/exchange2/exchange.pkl', 'wb') as f:\n",
     "    pickle.dump(data, f, protocol=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "101\n"
+      "[-0.2  -0.1   0.02 -0.3   0.1   0.02] [-0.4   0.1   0.02  0.4   0.    0.02]\n"
      ]
     }
    ],
    "source": [
-    "print(len(data['panda0_ee']))"
+    "print(data['goal'], data['obj_init_pos'])"
    ]
   }
  ],
