add exchange_2 gripper config

--- a/post_process_data.ipynb
+++ b/post_process_data.ipynb
@@ -2,33 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/Users/reedpan/Downloads/trajectory/handover1_rearrange1/re1_hand1_1_or.pkl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/sn/lv1hjjwn5f7_rxnyvmrwf0y40000gn/T/ipykernel_97684/2533133098.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/Users/reedpan/Downloads/trajectory/handover1_rearrange1/re1_hand1_1.pkl'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/Users/reedpan/Downloads/trajectory/handover1_rearrange1/re1_hand1_1_or.pkl'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mdata_origin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/reedpan/Downloads/trajectory/handover1_rearrange1/re1_hand1_1_or.pkl'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pickle\n",
-    "with open('/Users/reedpan/Downloads/trajectory/handover1_rearrange1/re1_hand1_1.pkl', 'rb') as f:\n",
-    "    data = pickle.load(f)\n",
-    "with open('/Users/reedpan/Downloads/trajectory/handover1_rearrange1/re1_hand1_1_origin.pkl', 'rb') as f:\n",
-    "    data_origin = pickle.load(f)"
+    "with open('/Users/reedpan/Downloads/trajectory/exchange2/exchange_2.pkl', 'rb') as f:\n",
+    "    data = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,13 +35,19 @@
     "data['panda0_ee_new'] = np.array(data['panda0_ee'])\n",
     "data['panda1_ee_new'] = np.array(data['panda1_ee'])\n",
     "\n",
-    "data['panda0_finger_new'][:16] = 1\n",
-    "data['panda0_finger_new'][16:37] = 0\n",
-    "data['panda0_finger_new'][37:] = 1\n",
+    "data['panda0_finger_new'][:6] = 1\n",
+    "data['panda0_finger_new'][6:14] = 0\n",
+    "data['panda0_finger_new'][14:19] = 1\n",
+    "data['panda0_finger_new'][19:27] = 0\n",
+    "data['panda0_finger_new'][27:34] = 1\n",
+    "data['panda0_finger_new'][34:43] = 0\n",
+    "data['panda0_finger_new'][43:] = 1\n",
     "\n",
-    "data['panda1_finger_new'][:36] = 1\n",
-    "data['panda1_finger_new'][36:67] = 0\n",
-    "data['panda1_finger_new'][67:] = 1\n",
+    "data['panda1_finger_new'][:2] = 1\n",
+    "data['panda1_finger_new'][2:18] = 0\n",
+    "data['panda1_finger_new'][20:42] = 1\n",
+    "data['panda1_finger_new'][42:51] = 0\n",
+    "data['panda1_finger_new'][51:] = 1\n",
     "\n",
     "# data['panda1_ee_new'][..., 0] -= 0.06\n",
     "# data['panda1_ee_new'][..., 1] += 0.04\n",
@@ -64,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('/Users/reedpan/Downloads/trajectory/handover1_rearrange1/re1_hand1_1.pkl', 'wb') as f:\n",
+    "with open('/Users/reedpan/Downloads/trajectory/exchange2/exchange_2.pkl', 'wb') as f:\n",
     "    pickle.dump(data, f, protocol=2)"
    ]
   },
